<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiNumberActivity">

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/icon_number3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/radio_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/three" />

        <Button
            android:id="@+id/icon_number4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/radio_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/four" />

        <Button
            android:id="@+id/icon_number5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/radio_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/five" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1">

        <Button
            android:id="@+id/icon_number6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/radio_background"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/six" />

        <Button
            android:id="@+id/icon_number7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/radio_background"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/seven" />

        <Button
            android:id="@+id/icon_number8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/radio_background"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/eight" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <Button
            android:id="@+id/icon_number9"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/radio_background"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/nine" />

        <Button
            android:id="@+id/icon_number10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/radio_background"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/ten" />

        <Button
            android:id="@+id/icon_number11"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/radio_background"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/eleven" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="402dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/icon_number12"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/radio_background"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/twelve" />

    </RadioGroup>


    <Button
        android:id="@+id/start"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="100dp"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_title5"
        android:layout_width="354dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/instruction"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="43dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_return1" />

</android.support.constraint.ConstraintLayout>
